--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="card">
-        <img class="nmr" src="moaz.png">
+        <img class="nmr" src="https://moazdarb.netlify.app/moaz.png">
         <h1>Moaz Moustafa</h1>
         <p>Frontend developer</p>
         <a href="https://wa.me/201065725093" target="_blank">Contact me</a>
